# industrial-vision-qc-platform

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml  scripts.ps1
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
data/: README.md
docs/: anomaly-detection.md  classical-vision-baseline.md  current-project-status.md  data-loop.md  decisions.md  demo-script.md  deployment.md  docker-deployment.md  final-audit-report.md  hybrid-inference.md  limitations.md  model-evaluation.md  onnx-deployment.md  project-plan.md  release-notes-v1.0.0.md  screenshot-checklist.md  system-design.md  yolo-detection.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
scripts/: __init__.py  benchmark_onnx.py  benchmark_onnx_real_images.py  check_onnx_model.py  check_yolo_consistency.py  convert_voc_to_yolo.py  download_mvtec_ad.py  download_neu_det.py  evaluate_anomaly.py  export_yolo_errors.py  export_yolo_onnx.py  generate_detection_smoke_dataset.py  generate_onnx_smoke_model.py  predict_anomaly.py  prepare_neu_det.py  register_anomaly_model.py  register_detection_model.py  register_onnx_model.py  register_runtime_models.py  run-production-simulator.ps1  run_classical_vision.py  run_neu_classical_baseline.py  run_onnx.py  run_yolo.py  scan_data_quality.py  seed_database.py  simulate_production_line.py  split_detection_dataset.py  start-dev.ps1  stop-dev.ps1  test-all.ps1  train_anomaly.py  train_yolo.py  validate_detection_dataset.py  validate_yolo.py
(+114 files in other folders)
