[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-vision-quality-loop"
version = "0.1.0"
description = "Industrial vision inspection and quality feedback loop backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "onnx>=1.17,<2",
  "onnxruntime-gpu>=1.20,<2",
  "opencv-python-headless>=4.10,<5",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "psutil>=6,<8",
  "python-json-logger>=3.2,<4",
  "PyYAML>=6,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "black>=24.10,<26",
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q --strict-markers"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["backend.app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["onnxruntime", "psutil"]
ignore_missing_imports = true
